--- a/RunAny/RunAny.ini
+++ b/RunAny/RunAny.ini
@@ -1,82 +1,56 @@
 -划词(&1)|text
 	--搜索(&1)
-		---网搜(&1)
-			Google|https://www.google.com/search?q=%s
-;			百度搜索|https://www.baidu.com/s?wd=%s
-;			Bing|https://www.bing.com/search?q=%s
-		---绿软(&2)
-			易破解|https://www.ypojie.com/?s=%s
-			果核剥壳|https://www.ghxi.com/?s=%s
-			423Down|https://www.423down.com/?s=%s
-			mefcl|https://www.mefcl.com/?s=%s
-			脚本之家|https://zhannei.baidu.com/cse/site?q=%s&cc=jb51.net&ie=utf-8
-		---翻译(&3)
-			翻译(&F)|https://translate.google.com/?sl=auto&tl=zh-CN&text=%getZz%%0A&op=translate
-			百度翻译|https://fanyi.baidu.com/mtpe-individual/multimodal?query=%s&lang=en2zh
-			有道词典|http://dict.youdao.com/search?q=%getZz%
-			谷歌翻译|https://translate.google.com/?text=%getZz%
-		---视频(&4)
-			B站|http://search.bilibili.com/all?keyword=%s
-		---购物(&b)
-			淘宝(&5)|https://s.taobao.com/search?q=%s
-			天猫|http://list.tmall.com/search_product.htm?q=%s
-			京东(&D)|http://search.jd.com/Search?keyword=%s&enc=utf-8
-	--文本(&2)
-                沙拉划词翻译(&1)|XiaoYao_plus[RA_plus](%getZz%,,6003)
-	        转大写|huiZz_Text[text_format_zz](%getZz%,{:U})
+		Google|https://www.google.com/search?q=%s
+		;百度搜索|https://www.baidu.com/s?wd=%s
+		;Bing|https://www.bing.com/search?q=%s
+	--绿软(&2)
+		易破解|https://www.ypojie.com/?s=%s
+		果核剥壳|https://www.ghxi.com/?s=%s
+		423Down|https://www.423down.com/?s=%s
+		mefcl|https://www.mefcl.com/?s=%s
+		脚本之家|https://zhannei.baidu.com/cse/site?q=%s&cc=jb51.net&ie=utf-8
+	--翻译(&3)
+		翻译(&F)|https://translate.google.com/?sl=auto&tl=zh-CN&text=%getZz%%0A&op=translate
+		百度翻译|https://fanyi.baidu.com/mtpe-individual/multimodal?query=%s&lang=en2zh
+		有道词典|http://dict.youdao.com/search?q=%getZz%
+		谷歌翻译|https://translate.google.com/?text=%getZz%
+	--文本(&4)
+		沙拉划词(&1)|XiaoYao_plus[RA_plus](%getZz%,,6003)
+		---
+		转大写|huiZz_Text[text_format_zz](%getZz%,{:U})
 		转小写|huiZz_Text[text_format_zz](%getZz%,{:L})
 		首字母大写|huiZz_Text[text_format_zz](%getZz%,{:T})
-		路径斜杠转换	!/|XiaoYao_plus[RA_plus](%getZz%,,20)
 		---
 		转中文数字|huiZz_Text[text_cn2_zz](%getZz%,1)
 		转阿拉伯数字|huiZz_Text[text_cn2_zz](%getZz%,0)
-		
--常用(&2)
-	--效率记事(&1)
-		Obsidian(&1)|Obsidian.exe
-		Typora(&2)|Typora.exe
-		eDiary(&3)|eDiary.exe
-		Emedit(&4)|EmEditorPortable.exe
-	--同步对比(&2)
-		Syncthing(&1)|Syncthing.exe -no-console -no-browser
-		BCompare(&2)|BCompare.exe
-		GoodSync(&3)|GoodSync2Go.exe
-	--编程软件(&3)
-		小熊猫C++|RedPandaIDE.exe
-		Adventure|Adventure.exe
-		aardio|aardio.exe
-	--汉化翻译
-		查壳|exeinfope.exe
-		Trados|SDLTradosStudio.exe
-		Passolo|psl.exe
-		Sisulizer|Sisulizer.exe
-	--网络工具
-		Xshell|Xshell.exe
-		WinSCP|WinSCPPortable.exe
-		Chrome|GoogleChromePortable.exe
-		微软远程|2XClient.exe
-		FTP链接|FileZillaPortable.exe
-		FDM下载|FreeDownloadManagerPortable.exe
-	--系统维护
-		Aida|aida64.exe
-		Ventoy|VentoyPortable.exe
-		Rufus|RufusPortable.exe
-		Dism++|Dism++x64.exe
-		监控注册表|RegFromApp.exe
-	--影音图片
-		Gif录制|ScreenToGifPortable.exe
+		;路径斜杠转换	!/|XiaoYao_plus[RA_plus](%getZz%,,20)
+		;    --视频
+		;        B站|http://search.bilibili.com/all?keyword=%s
+		;    --购物
+		;        淘宝|https://s.taobao.com/search?q=%s
+		;        天猫|http://list.tmall.com/search_product.htm?q=%s
+		;        京东|http://search.jd.com/Search?keyword=%s&enc=utf-8
+-文件(&1)|public file
+	批量重命名(&1)|FFRenamePro.exe
+	取得所有权(&2)|EcMenu.exe /Admin /takeown "%getZz%"
+	;【下载地址：https://www.ghxi.com/IObitUnlockerPortable.html/comment-page-1】
 	--
-	&Snipit|Snipaste.exe
-	&Ditto|DittoPortable.exe
-	&OCR|天若OCR文字识别.exe
-	&Eagle|Eagle.exe
-	&PortableApps|PortableAppsPlatform.exe
--工具(&3)
-	--Everything搜索
-		文件秒搜|Everything.exe -home
-		搜当前目录|XiaoYao_plus[RA_plus](,%"Everything.exe"%,11)
-		搜索选中内容|Everything.exe -search "%getZz%"
-	--新建
+	复制路径(&3)|huiZz_System[system_file_path_zz](%getZz%,path)
+	复制名称(&4)|huiZz_System[system_file_path_zz](%getZz%,name)
+	复制无后缀名称(&5)|huiZz_System[system_file_path_zz](%getZz%,nameNoExt)
+	复制所在目录(&6)|huiZz_System[system_file_path_zz](%getZz%,dir)
+	; 复制lnk指向路径|huiZz_System[system_file_path_zz](%getZz%,lnkTarget)
+	; 复制lnk指向目录|huiZz_System[system_file_path_zz](%getZz%,lnkDir)
+	--
+	解锁[#]|XiaoYao_plus[RA_plus](%getZz%,%"IObitUnlocker.exe"%,5001)
+	删除[#]|XiaoYao_plus[RA_plus](%getZz%,%"IObitUnlocker.exe"%,5002)
+	--
+	;功能说明：将选中的文件夹内的所有文件，保持文件夹目录架构不变，整体移到父目录
+	整体移到父目录|XiaoYao_plus[RA_plus](%getZz%,,32)
+	;功能说明：选中多个文件夹，删除其中空白的文件夹
+	删除空文件夹|XiaoYao_plus[RA_plus3](%getZz%,%ComSpec%,/c "rd $1",$1=#path#)
+-快捷(&2)
+	--新建文件
 		新建AHK脚本|XiaoYao_plus[CreateFile](%A_ScriptDir%\Custom\文件模板\AutoHotKey.ahk,{Activepath})
 	--窗口操作
 		当前窗口目录|huiZz_Window[win_folder_zz]()
@@ -109,41 +83,21 @@
 		; ---
 		; 连点[弹框输入版]|XiaoYao_plus[MouseClick](弹框输入)
 		; 连点[关闭]|XiaoYao_plus[MouseClick](off)
--文件(&F)|public file
-	批量重命名|FFRenamePro.exe
-	取得所有权|EcMenu.exe /Admin /takeown "%getZz%"
-	;【下载地址：https://www.ghxi.com/IObitUnlockerPortable.html/comment-page-1】
-	--
-	复制名称|huiZz_System[system_file_path_zz](%getZz%,name)
-	复制无后缀名称|huiZz_System[system_file_path_zz](%getZz%,nameNoExt)
-	复制路径|huiZz_System[system_file_path_zz](%getZz%,path)
-	复制所在目录|huiZz_System[system_file_path_zz](%getZz%,dir)
-	; 复制lnk指向路径|huiZz_System[system_file_path_zz](%getZz%,lnkTarget)
-	; 复制lnk指向目录|huiZz_System[system_file_path_zz](%getZz%,lnkDir)
-	--
-	解锁[#]|XiaoYao_plus[RA_plus](%getZz%,%"IObitUnlockerPortable.exe"%,5001)
-	删除[#]|XiaoYao_plus[RA_plus](%getZz%,%"IObitUnlockerPortable.exe"%,5002)
-	--
-	;功能说明：将选中的文件夹内的所有文件，保持文件夹目录架构不变，整体移到父目录
-	整体移到父目录|XiaoYao_plus[RA_plus](%getZz%,,32)
-	;功能说明：选中多个文件夹，删除其中空白的文件夹
-	删除空文件夹|XiaoYao_plus[RA_plus3](%getZz%,%ComSpec%,/c "rd $1",$1=#path#)
--快捷(&4)
-	--配置修改(&1)
-		RunAny(&1)|sublime_text.exe %A_ScriptDir%\RunAny.ini
-		Cmder(&2)|notepad3.exe D:\Scoop\persist\cmder\config\user_aliases.cmd	
-
 	--隐藏菜单
-		;一些全局快捷键
+		; 一些全局快捷键
 		---快捷键
 			切换输入法	<^Space|{CTRL up}{ALT down}{SHIFT down}{SHIFT up}{ALT up}::
 			直接复制粘贴	!v|ronny_custom[copy_paste]()
-		;对话框保存时快捷打开路径
+			; 快速输入热字串
+		---热字串
+			:*X:"aicode|请帮我用老奶奶都能看懂的方法具体分析下面这段函数，并告诉我为什么这么做。他们的含义是什么，如果有数据则用表格的方法告诉我：;
+			; 对话框保存时快捷打开路径
 		---快捷路径|#32770.class
 			下载|\\192.168.0.222\downloads\Compress
+			; 针对性打开应用类型
 		---图片|png jpeg gif jpg
-                         压缩图片|tinypng-hide.exe
-                         上传图床|upgit-hide.exe
+			压缩图片|tinypng-hide.exe
+			上传图床|upgit-hide.exe
 		---MarkDown|md
 			Typor|Typora.exe
 		---文本|cmd bat conf reg ahk pub gitconfig gitignore yml vmoptions int
@@ -162,15 +116,13 @@
 			7z解压|XiaoYao_plus[RA_plus](%getZz%,%"SmartZip.exe"%,4001)
 			7z查看|7zFM.exe
 			抽取程序图标|ResourcesExtract.exe /Source "%getZz%" /DestFolder "%A_Desktop%\ExeIcon" /ExtractIcons 1 /ExtractCursors 1 /ExtractBitmaps 1 /FileExistMode 1 /OpenDestFolder 1
-			RH资源编辑|ResourceHackerPortable.exe.
+			RH资源编辑|ResourceHacker.exe.
 		---Obsidian|Obsidian.exe
 			EX红字(&1):*X:''red|{"type":"excalidraw/clipboard","elements":[{"id":"docXQLpO","type":"text","x":-665.5,"y":-519.2421875,"width":121,"height":25,"angle":0,"strokeColor":"#e03131","backgroundColor":"transparent","fillStyle":"solid","strokeWidth":2,"strokeStyle":"solid","roughness":1,"opacity":100,"groupIds":[],"frameId":null,"index":"a1G","roundness":null,"seed":2035862866,"version":629,"versionNonce":15198418,"isDeleted":false,"boundElements":[],"updated":1730574004779,"link":null,"locked":false,"text":"输出红色字体","rawText":"输出红色字体","fontSize":20,"fontFamily":5,"textAlign":"left","verticalAlign":"top","containerId":null,"originalText":"输出红色字体","autoResize":true,"lineHeight":1.25}],"files":{}};
 			EX蓝字(&2):*x"''blue|{"type":"excalidraw/clipboard","elements":[{"id":"8aPAceGl","type":"text","x":-1458.965392803891,"y":-413.5748007955032,"width":120,"height":25,"angle":0,"strokeColor":"#1971c2","backgroundColor":"transparent","fillStyle":"solid","strokeWidth":2,"strokeStyle":"solid","roughness":1,"opacity":100,"groupIds":[],"frameId":null,"index":"a1","roundness":null,"seed":2095728815,"version":471,"versionNonce":1347087346,"isDeleted":false,"boundElements":[],"updated":1730618850438,"link":null,"locked":false,"text":"输出蓝色字体","rawText":"输出蓝色字体","fontSize":20,"fontFamily":5,"textAlign":"left","verticalAlign":"top","containerId":null,"originalText":"输出蓝色字体","autoResize":true,"lineHeight":1.25}],"files":{}};
 			EX绿字(&3):*x"''green|{"type":"excalidraw/clipboard","elements":[{"id":"8L0VdTWr","type":"text","x":-1457.965392803891,"y":-376.5748007955032,"width":120,"height":25,"angle":0,"strokeColor":"#2f9e44","backgroundColor":"transparent","fillStyle":"solid","strokeWidth":2,"strokeStyle":"solid","roughness":1,"opacity":100,"groupIds":[],"frameId":null,"index":"a2","roundness":null,"seed":459956431,"version":410,"versionNonce":1202494898,"isDeleted":false,"boundElements":[],"updated":1730618850438,"link":null,"locked":false,"text":"输出绿色字体","rawText":"输出绿色字体","fontSize":20,"fontFamily":5,"textAlign":"left","verticalAlign":"top","containerId":null,"originalText":"输出绿色字体","autoResize":true,"lineHeight":1.25}],"files":{}};
 			EX黄字(&4):*x"''yellow|{"type":"excalidraw/clipboard","elements":[{"id":"3neyMQ6t","type":"text","x":-1461.965392803891,"y":-448.5748007955032,"width":120,"height":25,"angle":0,"strokeColor":"#f08c00","backgroundColor":"transparent","fillStyle":"solid","strokeWidth":2,"strokeStyle":"solid","roughness":1,"opacity":100,"groupIds":[],"frameId":null,"index":"a3","roundness":null,"seed":1882703009,"version":419,"versionNonce":1399986034,"isDeleted":false,"boundElements":[],"updated":1730618850438,"link":null,"locked":false,"text":"输出黄色字体","rawText":"输出黄色字体","fontSize":20,"fontFamily":5,"textAlign":"left","verticalAlign":"top","containerId":null,"originalText":"输出黄色字体","autoResize":true,"lineHeight":1.25}],"files":{}};
-		---AI提问热字串
-                        :*X:"aicode|请帮我用老奶奶都能看懂的方法具体分析下面这段函数，并告诉我为什么这么做。他们的含义是什么，如果有数据则用表格的方法告诉我：;
-		;模仿vim快捷键快速移动
+			;模仿vim快捷键快速移动
 		---vim
 			;方向↓	<!j|{Down}::
 			方向↓	CapsLock & j|{Down}::
@@ -193,25 +145,28 @@
 			跳转选中到行首	<!+,|+{Home}::
 			跳转选中到行末	<!+.|+{End}::
 			跳转选中到顶部	<!+u|^+{End}::
-			跳转选中到底部	<!+i|^+{Home}::			
--方案(&5)
-	开启同步(&1)|huiZz_BatchRun[multi_open](,%"BaiduNetdisk.exe"%,%"syncthing.exe"%)
-;	关闭同步(&2)|huiZz_BatchRun[multi_open](,%"一键关闭同步程序.bat"%)
-	关闭同步(&2)|%ComSpec% /c "taskkill /f /t /im BaiduNetdisk.exe & taskkill /f /t /im syncthing.exe"
-	笔记截图(&3)|huiZz_BatchRun[multi_open](,%"Obsidian.exe"%,%"Snipaste.exe"%,%"DittoPortable.exe.exe"%)
-
--系统(&6)
-	&Geek|GeekUninstallerPortable.exe
-	&WizTree|WizTreePortable.exe
+			跳转选中到底部	<!+i|^+{Home}::
+-搜索(&3)
+	文件秒搜|Everything.exe -home
+	搜当前目录|XiaoYao_plus[RA_plus](,%"Everything.exe"%,11)
+	搜索选中内容|Everything.exe -search "%getZz%"
+-方案(&4)
+	笔记截图(&3)|huiZz_BatchRun[multi_open](,%"Obsidian.exe"%,%"Snipaste.exe"%,%"Ditto.exe"%)
+	;开启同步(&1)|huiZz_BatchRun[multi_open](,%"BaiduNetdisk.exe"%,%"syncthing.exe"%)
+	;关闭同步(&2)|%ComSpec% /c "taskkill /f /t /im BaiduNetdisk.exe & taskkill /f /t /im syncthing.exe"
+	;关闭同步(&2)|huiZz_BatchRun[multi_open](,%"一键关闭同步程序.bat"%)
+-系统(&5)
+	垃圾清理|huiZz_System[system_runas_zz](%"DiskCleanerPortable.exe"%  "/q /r=ronny")
+	程序卸载|Geek.exe
+	磁盘空间|WizTree.exe
 	--
-	重启资源管理器|EcMenu.exe /ReExplorer
+	重启资源管理|EcMenu.exe /ReExplorer
 	重建图标缓存|EcMenu.exe /ReIconCache
 	删除临时文件|EcMenu.exe /TempClean
-
-
+-配置(&6)
+	RunAny(&1)|Notepad3.exe %A_ScriptDir%\RunAny.ini
+	RunAny2(&2)|Notepad3.exe %A_ScriptDir%\RunAny2.ini
+	Cmder(&3)|Notepad3.exe D:\Scoop\persist\cmder\config\user_aliases.cmd
 -
 终端(&W)|wezterm-gui.exe
 ;TC(&Q)|TOTALCMD64.EXE
-垃圾清理|huiZz_System[system_runas_zz](%"DiskCleanerPortable.exe"%  "/q /r=ronny")
-; 待用命令备份
-;纯净粘贴|XiaoYao_plus[RA_plus](,,46)
