--- a/RunAny/RunAny.ini
+++ b/RunAny/RunAny.ini
@@ -16,6 +16,7 @@
 		谷歌翻译|https://translate.google.com/?text=%getZz%
 	--文本(&4)
 		沙拉划词(&1)|XiaoYao_plus[RA_plus](%getZz%,,6003)
+		路径\转//|ronny_custom[switch_slash](%getZz%)
 		---
 		转大写|huiZz_Text[text_format_zz](%getZz%,{:U})
 		转小写|huiZz_Text[text_format_zz](%getZz%,{:L})
@@ -102,10 +103,11 @@
 			Typor|Typora.exe
 		---文本|cmd bat conf reg ahk pub gitconfig gitignore yml vmoptions int
 			Notepad3(&N)|Notepad3.exe
-		---代码|txt ini json py c cpp html css js vbs lua
+		---代码|txt ini json py c cpp html css js vbs lua yaml
 			Sublime|sublime_text.exe
 			RedPanda|RedPandaIDE.exe
 			Notepad|Notepad3.exe
+			Vscode|Code.exe
 		---镜像|iso
 			ULTRAISO|ULTRAISO.exe
 		---压缩|zip 7z 7zip rar
@@ -151,7 +153,9 @@
 	搜当前目录|XiaoYao_plus[RA_plus](,%"Everything.exe"%,11)
 	搜索选中内容|Everything.exe -search "%getZz%"
 -方案(&4)
-	笔记截图(&3)|huiZz_BatchRun[multi_open](,%"Obsidian.exe"%,%"Snipaste.exe"%,%"Ditto.exe"%)
+	;笔记截图(&3)|huiZz_BatchRun[multi_open](,%"Obsidian.exe"%,%"Snipaste.exe"%,%"Ditto.exe"%)
+	;CS50x|Code.exe "D:\Users\Ronny\Documents\VSCode\CS50x.code-workspace"
+	CS50容器|Code.exe "D:\Users\Ronny\Documents\VSCode\CS50x.Dokcer-workspace.code-workspace"
 	;开启同步(&1)|huiZz_BatchRun[multi_open](,%"BaiduNetdisk.exe"%,%"syncthing.exe"%)
 	;关闭同步(&2)|%ComSpec% /c "taskkill /f /t /im BaiduNetdisk.exe & taskkill /f /t /im syncthing.exe"
 	;关闭同步(&2)|huiZz_BatchRun[multi_open](,%"一键关闭同步程序.bat"%)
